# deepagents

./: .release-please-manifest.json  AGENTS.md
.github/workflows/: check_versions.yml  ci.yml  release.yml
deepagents-design-docs/: 01-架构设计.md  02-Backend系统设计.md  03-Middleware系统设计.md  04-Agent创建流程详解.md  05-BackendProtocol详解.md  06-StateBackend实现.md  07-FilesystemBackend实现.md  08-StoreBackend实现.md  09-CompositeBackend实现.md  10-Sandbox与LocalShellBackend.md  11-FilesystemMiddleware详解.md  12-SubAgentMiddleware详解.md  13-SummarizationMiddleware详解.md  14-SkillsMiddleware详解.md  15-MemoryMiddleware详解.md  16-PatchToolCallsMiddleware.md  17-工具实现详解.md  18-状态管理详解.md  19-安全机制详解.md  20-Backend工具函数.md  21-Middleware工具函数.md  22-模型初始化与配置.md  README.md  实施计划.md
libs/acp/: pyproject.toml
libs/cli/: CHANGELOG.md  pyproject.toml
libs/cli/deepagents_cli/: _version.py  agent.py  app.py  config.py  main.py  model_config.py  non_interactive.py  textual_adapter.py  ui.py
libs/cli/deepagents_cli/built_in_skills/skill-creator/scripts/: init_skill.py
libs/cli/deepagents_cli/integrations/: daytona.py  langsmith.py  modal.py  runloop.py  sandbox_factory.py
libs/cli/deepagents_cli/skills/: commands.py  load.py
libs/cli/deepagents_cli/widgets/: approval.py  autocomplete.py  chat_input.py  message_store.py  messages.py  model_selector.py  status.py  welcome.py
libs/cli/tests/unit_tests/: test_agent.py  test_app.py  test_approval.py  test_args.py  test_autocomplete.py  test_config.py  test_end_to_end.py  test_main_args.py  test_message_store.py  test_model_config.py  test_model_selector.py  test_model_switch.py  test_non_interactive.py  test_status.py  test_textual_adapter.py  test_version.py  test_welcome.py
libs/cli/tests/unit_tests/skills/: test_commands.py
libs/deepagents/: TECH_STACK.md  pyproject.toml
libs/deepagents/deepagents/: _version.py  graph.py
libs/deepagents/deepagents/backends/: composite.py  filesystem.py  sandbox.py  utils.py
libs/deepagents/deepagents/middleware/: filesystem.py  skills.py  summarization.py
libs/deepagents/tests/integration_tests/: test_filesystem_middleware.py  test_subagent_middleware.py  test_summarization.py
libs/deepagents/tests/unit_tests/: test_middleware.py  test_middleware_async.py
libs/deepagents/tests/unit_tests/backends/: test_composite_backend.py  test_composite_backend_async.py  test_filesystem_backend.py  test_filesystem_backend_async.py  test_state_backend.py  test_state_backend_async.py  test_store_backend_async.py  test_utils.py
libs/deepagents/tests/unit_tests/middleware/: test_memory_middleware.py  test_skills_middleware.py  test_summarization_middleware.py  test_validate_path.py
libs/partners/daytona/: Makefile  pyproject.toml
libs/partners/daytona/langchain_daytona/: sandbox.py
libs/partners/modal/: Makefile  pyproject.toml
libs/partners/modal/langchain_modal/: sandbox.py
libs/partners/runloop/: Makefile  pyproject.toml
libs/partners/runloop/langchain_runloop/: sandbox.py
