[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deepagents-acp"
version = "0.0.1"
description = "Agent Client Protocol integration for Deep Agents"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
]
maintainers = [
]
keywords = ["agent", "acp", "agent-client-protocol", "deepagents", "ai-agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "agent-client-protocol>=0.8.0",
    "deepagents",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
test = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest-socket>=0.7.0",
    "pytest-timeout>=2.3.1",
    "pytest-watcher>=0.3.4,<1.0.0",
    "ruff>=0.9.7",
    "ty>=0.0.1,<1.0.0",
]



[project.urls]
Homepage = "https://docs.langchain.com/oss/python/deepagents/overview"
Documentation = "https://reference.langchain.com/python/deepagents/"
Repository = "https://github.com/langchain-ai/deepagents"
Issues = "https://github.com/langchain-ai/deepagents/issues"
Twitter = "https://x.com/LangChain"

[project.scripts]
deepagents-acp = "deepagents_acp.__main__:main"

[tool.uv]
package = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "TID252"]
ignore = []

[tool.ruff.lint.isort]
force-single-line = false
combine-as-imports = true
known-first-party = ["deepagents_acp"]

[tool.pytest.ini_options]
asyncio_mode = "auto" # or "strict"
